--- a/serv.cabal
+++ b/serv.cabal
@@ -17,23 +17,13 @@ library
   hs-source-dirs:      src
   exposed-modules:     Lib
   build-depends:       base >= 4.7 && < 5
-  default-language:    Haskell2010
-
-executable serv-exe
-  hs-source-dirs:      app
-  main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  build-depends:       base
-                     , serv
-  default-language:    Haskell2010
-
-test-suite serv-test
-  type:                exitcode-stdio-1.0
-  hs-source-dirs:      test
-  main-is:             Spec.hs
-  build-depends:       base
-                     , serv
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+                     , bytestring
+                     , either
+                     , http-types
+                     , mtl
+                     , text
+                     , transformers
+                     , wai
   default-language:    Haskell2010
 
 source-repository head
