--- a/serv.cabal
+++ b/serv.cabal
@@ -19,6 +19,7 @@ library
   build-depends:       base >= 4.7 && < 5
                      , bytestring
                      , either
+                     , http-media
                      , http-types
                      , mtl
                      , text
