--- a/serv.cabal
+++ b/serv.cabal
@@ -29,6 +29,7 @@ library
   build-depends:       base >= 4.7 && < 5
                      , bytestring
                      , case-insensitive
+                     , containers
                      , either
                      , http-media
                      , http-types
