--- a/serv.cabal
+++ b/serv.cabal
@@ -16,9 +16,11 @@ library
   hs-source-dirs:      src
   exposed-modules:
 
-    Serv.Example
+    Serv.Api
+    Serv.Server
+    Serv.Common
+    Serv.ContentType
     Serv.Internal.Api
-    Serv.Internal.HList
     Serv.Internal.Header
     Serv.Internal.Header.Name
     Serv.Internal.Header.Serialization
@@ -47,6 +49,17 @@ library
                      , text
                      , transformers
                      , wai
+  default-language:    Haskell2010
+
+executable test-server
+  hs-source-dirs:      app
+  main-is:             TestServer.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  build-depends:       base
+                     , serv
+                     , wai
+                     , warp
+                     , text
   default-language:    Haskell2010
 
 source-repository head
