--- a/serv.cabal
+++ b/serv.cabal
@@ -62,6 +62,27 @@ executable test-server
                      , serv
                      , wai
                      , warp
+                     , text
+  default-language:    Haskell2010
+
+test-suite serv-test
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      test
+  main-is:             Spec.hs
+  build-depends:       base
+                     , serv
+
+                     , HUnit
+                     , QuickCheck
+                     , tasty
+                     , tasty-ant-xml
+                     , tasty-hunit
+                     , tasty-quickcheck
+                     , text
+                     , wai
+                     , wai-extra
+
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
 source-repository head
