--- a/serv.cabal
+++ b/serv.cabal
@@ -1,13 +1,13 @@
 name:                serv
 version:             0.1.0.0
-synopsis:            Initial project template from stack
+synopsis:            Dependently typed API server framework
 description:         Please see README.md
-homepage:            http://github.com/githubuser/serv#readme
+homepage:            http://github.com/tel/serv#readme
 license:             BSD3
 license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2010 Author Here
+author:              Joseph Abrahamson <me@jspha.com>
+maintainer:          me@jspha.com
+copyright:           2015 Joseph Abrahamson
 category:            Web
 build-type:          Simple
 cabal-version:       >=1.10
