fail travis builds if haddock fails

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,4 @@ install:
 
 script:
   - stack --no-terminal --skip-ghc-check test --fast --pedantic
+  - ./travis/long stack --no-terminal --skip-ghc-check haddock
