--- a/serv.cabal
+++ b/serv.cabal
@@ -16,35 +16,36 @@ library
   hs-source-dirs:      src
   exposed-modules:
 
-    Serv.Api.Annotation
     Serv.Api
+    Serv.Api.Annotation
     Serv.Common
     Serv.ContentType
     Serv.Cors
     Serv.Header
+    Serv.Internal.Api
     Serv.Internal.Api.Analysis
     Serv.Internal.Api.Annotation
-    Serv.Internal.Api
     Serv.Internal.Cors
-    Serv.Internal.Header.Serialization
     Serv.Internal.Header
+    Serv.Internal.Header.Serialization
     Serv.Internal.MediaType
     Serv.Internal.Pair
     Serv.Internal.Query
     Serv.Internal.RawText
     Serv.Internal.Rec
+    Serv.Internal.Server
     Serv.Internal.Server.Config
     Serv.Internal.Server.Context
     Serv.Internal.Server.Error
     Serv.Internal.Server.Monad
     Serv.Internal.Server.Response
     Serv.Internal.Server.Type
-    Serv.Internal.Server
     Serv.Internal.StatusCode
     Serv.Internal.TypeLevel
     Serv.Internal.URI
     Serv.Internal.Verb
     Serv.Server
+    Serv.StatusCode
     Serv.URI
 
   build-depends:       base >= 4.7 && < 5
