add media types, queries

--- a/http-kinder/http-kinder.cabal
+++ b/http-kinder/http-kinder.cabal
@@ -21,14 +21,15 @@ library
     Network.HTTP.Kinder.Header
     Network.HTTP.Kinder.Header.Definitions
     Network.HTTP.Kinder.Header.Serialization
-    -- Network.HTTP.Kinder.MediaType
-    -- Network.HTTP.Kinder.Query
+    Network.HTTP.Kinder.MediaType
+    Network.HTTP.Kinder.Query
     Network.HTTP.Kinder.Status
     Network.HTTP.Kinder.URI
     Network.HTTP.Kinder.Verb
 
   build-depends:       base >= 4.7 && < 5
 
+                     , aeson
                      , bytestring
                      , case-insensitive
                      , containers
