begin refactoring serv to use http-kinder

--- a/serv/serv.cabal
+++ b/serv/serv.cabal
@@ -54,6 +54,7 @@ library
                      , bytestring
                      , case-insensitive
                      , containers
+                     , http-kinder
                      , http-media
                      , http-types
                      , mtl
