--- a/serv-wai/serv-wai.cabal
+++ b/serv-wai/serv-wai.cabal
@@ -42,11 +42,13 @@ library
                      , http-types
                      , mmorph
                      , mtl
+                     , serv
                      , singletons
                      , tagged
                      , text
                      , time
                      , transformers
+                     , vinyl
                      , wai
 
   default-language:    Haskell2010
