--- a/serv-wai/serv-wai.cabal
+++ b/serv-wai/serv-wai.cabal
@@ -26,12 +26,8 @@ library
   hs-source-dirs:      src
   exposed-modules:
 
-    Serv.Cors
-    Serv.Internal.Cors
-    Serv.Internal.Server
-    Serv.Internal.Server.Type
-    Serv.Internal.TypeLevel
-    Serv.Server
+    -- Serv.Internal.Server
+    -- Serv.Internal.TypeLevel
 
     Serv.Wai.Type
     Serv.Wai.Error
