add serv.wai to cabal file

--- a/serv-wai/serv-wai.cabal
+++ b/serv-wai/serv-wai.cabal
@@ -29,6 +29,7 @@ library
     -- Serv.Internal.Server
     -- Serv.Internal.TypeLevel
 
+    Serv.Wai
     Serv.Wai.Type
     Serv.Wai.Error
     Serv.Wai.Rec
