--- a/serv/serv.cabal
+++ b/serv/serv.cabal
@@ -32,8 +32,12 @@ library
     Serv.Api.Prelude
 
   build-depends:       base >= 4.7 && < 5
+
+                     , containers
                      , http-kinder
                      , singletons
+                     , text
+
   default-language:    Haskell2010
 
 source-repository head
