--- a/http-kinder/http-kinder.cabal
+++ b/http-kinder/http-kinder.cabal
@@ -44,6 +44,30 @@ library
 
   default-language:    Haskell2010
 
+test-suite http-kinder-test
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      test
+  main-is:             Spec.hs
+  other-modules:
+
+    Test.Network.HTTP.Kinder.URI
+
+  build-depends:       base
+                     , http-kinder
+
+                     , HUnit
+                     , QuickCheck
+                     , tasty
+                     , tasty-ant-xml
+                     , tasty-hunit
+                     , tasty-quickcheck
+                     , text
+                     , wai
+                     , wai-extra
+
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  default-language:    Haskell2010
+
 source-repository head
   type:     git
   location: https://github.com/tel/serv
