--- a/serv-wai/serv-wai.cabal
+++ b/serv-wai/serv-wai.cabal
@@ -56,7 +56,7 @@ library
 
   default-language:    Haskell2010
 
-test-suite serv-test
+test-suite serv-wai-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
