--- a/serv-wai/serv-wai.cabal
+++ b/serv-wai/serv-wai.cabal
@@ -1,5 +1,5 @@
 name:                serv-wai
-version:             0.2.0.0
+version:             0.2.1.0
 synopsis:            Dependently typed API servers with Serv
 description:
   Implement "Network.Wai" style servers matching "Serv.Api" style API
@@ -54,7 +54,7 @@ library
                      , transformers
                      , vinyl
                      , wai
-
+  ghc-options:         -Wall -Werror -Wcompat -Wredundant-constraints -Wunused-imports
   default-language:    Haskell2010
 
 executable example1
@@ -69,7 +69,7 @@ executable example1
                      , wai
                      , warp
 
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:        -Wall -Werror -Wcompat -Wredundant-constraints -Wunused-imports -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
 test-suite serv-wai-test
@@ -95,7 +95,7 @@ test-suite serv-wai-test
                      , wai
                      , wai-extra
 
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:       -Wall -Werror -Wcompat -Wredundant-constraints -Wunused-imports -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
 source-repository head
