--- a/serv/serv.cabal
+++ b/serv/serv.cabal
@@ -1,5 +1,5 @@
 name:                serv
-version:             0.2.0.0
+version:             0.2.1.0
 synopsis:            Dependently typed API framework
 description:
   Types and kinds for describing APIs.
@@ -34,7 +34,7 @@ library
 
                      , http-kinder
                      , singletons
-
+  ghc-options:         -Wall -Werror -Wcompat -Widentities -Wredundant-constraints -Wunused-imports
   default-language:    Haskell2010
 
 source-repository head
